--- a/sphinx_data_logger/CMakeLists.txt
+++ b/sphinx_data_logger/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   geometry_msgs
+  nav_msgs
   message_generation
   dynamic_reconfigure
 )
