update acado model

--- a/mpc_flight_controller/generator/CMakeLists.txt
+++ b/mpc_flight_controller/generator/CMakeLists.txt
@@ -18,8 +18,8 @@ SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${PROJECT_SOURCE_DIR} )
 #
 FIND_PACKAGE( ACADO REQUIRED )
 
-FILE(GLOB_RECURSE HDRS_FILES "src/*.h" "src/*.hpp")
-FILE(GLOB_RECURSE SRCS_FILES "src/*.c" "src/*.cpp")
+#FILE(GLOB_RECURSE HDRS_FILES "src/*.h" "src/*.hpp")
+#FILE(GLOB_RECURSE SRCS_FILES "src/*.c" "src/*.cpp")
 
 #
 # Include directories
@@ -29,6 +29,6 @@ INCLUDE_DIRECTORIES( . ${ACADO_INCLUDE_DIRS} )
 #
 # Build an executable
 #
-ADD_EXECUTABLE(        ${PROJECT_NAME} ${SRCS_FILES} ${HDRS_FILES} )
+ADD_EXECUTABLE(        ${PROJECT_NAME} src/mpc_flight_controller.cpp)
 TARGET_LINK_LIBRARIES( ${PROJECT_NAME} ${ACADO_SHARED_LIBRARIES} )
 SET_TARGET_PROPERTIES( ${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
